Fix for modal-backdrop not spanning the whole screen at any time. Fix for .has-feedback to not overlap the date inputs

--- a/client-infrastructure/src/ocInfra/css/omnichannel.css
+++ b/client-infrastructure/src/ocInfra/css/omnichannel.css
@@ -600,7 +600,7 @@ select[multiple].input-lg {
 }
 
 .has-feedback {
-  position: relative;
+  position: static;
 }
 .has-feedback .form-control, .has-feedback .oc-form-control {
   padding-right: 42.5px;
@@ -880,7 +880,7 @@ select[multiple].input-lg {
 }
 
 .modal-backdrop {
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   left: 0;
